--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,6 @@
     <title>DogTitle</title>
     <link rel="stylesheet" href="material-design-lite/material.css" />
     <script src="material-design-lite/material.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
@@ -17,16 +16,20 @@
             <span id="logo">Pörkölt</span>
             <h1 class="mdl-card__title">DogTitle</h1>
         </div>
-        <div class="mdl-card__supporting-text">
+        <div id="queue" class="mdl-card__supporting-text" style="display: none;">
+            <ul id="list"></ul>
+        </div>
+        <div id="description" class="mdl-card__supporting-text">
             Just drop your videos here and <b>DogTitle</b> will find the right subtitle for your movies and TV shows.
         </div>
         <div class="mdl-card__actions mdl-card--border">
-            <button id="caption1" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+            <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                 Select language
             </button>
         </div>
     </div>
     <script src="resources/LiveReload.js"></script>
     <script src="resources/AppControl.js"></script>
+    <script src="resources/Dummy.js"></script>
 </body>
 </html>
