--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="mdl-card  mdl-shadow--2dp  demo-card-square">
-        <div class="mdl-card__title  mdl-card--expand">
+        <div id="almafa" class="mdl-card__title  mdl-card--expand">
             <div class="mdl-card__dropfiles">
                 <!--<i class="material-icons">queue</i>-->
                 Drop here!
@@ -16,8 +16,39 @@
             <span id="logo">Pörkölt</span>
             <h1 class="mdl-card__title">DogTitle</h1>
         </div>
-        <div id="queue" class="mdl-card__supporting-text" style="display: none;">
-            <ul id="list"></ul>
+        <div id="queue" class="mdl-card__supporting-text  mdl-card--expand" style="display: none;">
+            <ul id="list">
+                <!--
+                <li>
+                    <span>Game.of.Thrones.S05E10.HDTV.XviD.HUN-SLN.mkv</span>
+                    <i class="material-icons  rotating">loop</i>
+                </li>
+                <li>
+                    <span>The.Flash.2014.S01E04.Going.Rogue.1080p.WEB-DL.DD5.1.H.264-NTb.mkv</span>
+                    <i class="material-icons  rotating">loop</i>
+                </li>
+                <li>
+                    <span>The.Last.Ship.S02E02.720p.HDTV.X264-DIMENSION.mkv</span>
+                    <i class="material-icons  rotating">loop</i>
+                </li>
+                <li>
+                    <span>The.Walking.Dead.S05.HUN.WEB-DL.XviD-DART</span>
+                    <i class="material-icons  rotating">loop</i>
+                </li>
+                <li>
+                    <span>Daredevil.S01E01.720p.WEBRip.x264-SNEAkY.mkv</span>
+                    <i class="material-icons  rotating">loop</i>
+                </li>
+                <li>
+                    <span>True.Detective.S02E02.HDTV.x264-ASAP</span>
+                    <i class="material-icons  rotating">loop</i>
+                </li>
+                <li>
+                    <span>Wayward.Pines.S01E06.WEB-DL.x264.HUN-Teko</span>
+                    <i class="material-icons  rotating">loop</i>
+                </li>
+                -->
+            </ul>
         </div>
         <div id="description" class="mdl-card__supporting-text">
             Just drop your videos here and <b>DogTitle</b> will find the right subtitle for your movies and TV shows.
