--- a/app/index.html
+++ b/app/index.html
@@ -17,49 +17,31 @@
             <h1 class="mdl-card__title">DogTitle</h1>
         </div>
         <div id="queue" class="mdl-card__supporting-text  mdl-card--expand" style="display: none;">
-            <ul id="list">
-                <!--
-                <li>
-                    <span>Game.of.Thrones.S05E10.HDTV.XviD.HUN-SLN.mkv</span>
-                    <i class="material-icons  rotating">loop</i>
-                </li>
-                <li>
-                    <span>The.Flash.2014.S01E04.Going.Rogue.1080p.WEB-DL.DD5.1.H.264-NTb.mkv</span>
-                    <i class="material-icons  rotating">loop</i>
-                </li>
-                <li>
-                    <span>The.Last.Ship.S02E02.720p.HDTV.X264-DIMENSION.mkv</span>
-                    <i class="material-icons  rotating">loop</i>
-                </li>
-                <li>
-                    <span>The.Walking.Dead.S05.HUN.WEB-DL.XviD-DART</span>
-                    <i class="material-icons  rotating">loop</i>
-                </li>
-                <li>
-                    <span>Daredevil.S01E01.720p.WEBRip.x264-SNEAkY.mkv</span>
-                    <i class="material-icons  rotating">loop</i>
-                </li>
-                <li>
-                    <span>True.Detective.S02E02.HDTV.x264-ASAP</span>
-                    <i class="material-icons  rotating">loop</i>
-                </li>
-                <li>
-                    <span>Wayward.Pines.S01E06.WEB-DL.x264.HUN-Teko</span>
-                    <i class="material-icons  rotating">loop</i>
-                </li>
-                -->
-            </ul>
+            <ul id="list"></ul>
         </div>
         <div id="description" class="mdl-card__supporting-text">
             Just drop your videos here and <b>DogTitle</b> will find the right subtitle for your movies and TV shows.
         </div>
         <div class="mdl-card__actions mdl-card--border">
-            <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+            <button id="demo-menu-top-left" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                 Select language
             </button>
+            <ul class="mdl-menu mdl-menu--top-left mdl-js-menu mdl-js-ripple-effect"
+                for="demo-menu-top-left">
+                <li class="mdl-menu__item">Some Action</li>
+                <li class="mdl-menu__item">Another Action</li>
+                <li disabled class="mdl-menu__item">Disabled Action</li>
+                <li class="mdl-menu__item">Yet Another Action</li>
+            </ul>
+            <!--
+            <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
+                <i class="material-icons">add</i>
+            </button>
+            -->
         </div>
     </div>
     <script src="resources/LiveReload.js"></script>
+    <!--<script src="resources/OsxMenu.js"></script>-->
     <script src="resources/AppControl.js"></script>
     <script src="resources/Dummy.js"></script>
 </body>
