--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="mdl-card  mdl-shadow--2dp  demo-card-square">
-        <div id="almafa" class="mdl-card__title  mdl-card--expand">
+        <div id="section-header" class="mdl-card__title  mdl-card--expand">
             <div class="mdl-card__dropfiles">
                 <!--<i class="material-icons">queue</i>-->
                 Drop here!
@@ -16,30 +16,18 @@
             <span id="logo">Pörkölt</span>
             <h1 class="mdl-card__title">DogTitle</h1>
         </div>
-        <div id="queue" class="mdl-card__supporting-text  mdl-card--expand" style="display: none;">
+        <div id="section-queue" class="mdl-card__supporting-text  mdl-card--expand" style="display: none;">
             <ul id="list"></ul>
         </div>
-        <div id="description" class="mdl-card__supporting-text">
+        <div id="section-description" class="mdl-card__supporting-text">
             Just drop your videos here and <b>DogTitle</b> will find the right subtitle for your movies and TV shows.
         </div>
-        <div class="mdl-card__actions mdl-card--border">
-            <button id="demo-menu-top-left" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-                Select language
-            </button>
-            <ul class="mdl-menu mdl-menu--top-left mdl-js-menu mdl-js-ripple-effect"
-                for="demo-menu-top-left">
-                <li class="mdl-menu__item">Some Action</li>
-                <li class="mdl-menu__item">Another Action</li>
-                <li disabled class="mdl-menu__item">Disabled Action</li>
-                <li class="mdl-menu__item">Yet Another Action</li>
-            </ul>
-            <!--
-            <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
-                <i class="material-icons">add</i>
-            </button>
-            -->
+        <div id="section-language" class="mdl-card__actions">
+            <select id="lang">
+                <option>Hungarian</option>
+                <option>English</option>
+            </select>
         </div>
-    </div>
     <script src="resources/LiveReload.js"></script>
     <!--<script src="resources/OsxMenu.js"></script>-->
     <script src="resources/AppControl.js"></script>
