--- a/app/index.html
+++ b/app/index.html
@@ -33,9 +33,10 @@
                 </select>
             </div>
         </div>
+    </div>
     <script src="resources/LiveReload.js"></script>
     <!--<script src="resources/OsxMenu.js"></script>-->
     <script src="resources/AppControl.js"></script>
-    <script src="resources/Dummy.js"></script>
+    <!--<script src="resources/Dummy.js"></script>-->
 </body>
 </html>
